--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.home-screen {
+    background: url("./assets/bg-logo.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
