Performance optimization, Code refactoring, Nodemailer config

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -721,6 +721,14 @@ video {
   height: 100vh;
 }
 
+.h-\[screen\] {
+  height: screen;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -932,6 +940,10 @@ video {
 .bg-light {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-light\/60 {
+  background-color: rgb(255 255 255 / 0.6);
 }
 
 .bg-lightShaded {
@@ -1205,11 +1217,6 @@ video {
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-gray-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-primary\/80:hover {
